# softkvm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
agent/: Cargo.toml
agent/src/: connection.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: identify.rs  mod.rs  scan.rs  setup.rs  status.rs  switch.rs  uninstall.rs  update.rs  validate.rs
core/: Cargo.toml
core/src/: config.rs  ddc.rs  error.rs  input_source.rs  keymap.rs  lib.rs  protocol.rs  topology.rs
install/: install.ps1  install.sh
orchestrator/: Cargo.toml
orchestrator/src/: agent_listener.rs  deskflow.rs  discovery.rs  ipc_server.rs  key_interceptor.rs  log_parser.rs  main.rs  switch_engine.rs
orchestrator/tests/: integration.rs
setup/: package.json
setup/src/: config-gen.ts  discover.ts  index.ts  ipc-client.ts  monitor-scan.ts
ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/electron/: main.ts  preload.ts
ui/src/: App.tsx  globals.css  main.tsx  vite-env.d.ts
ui/src/components/: Advanced.tsx  Behavior.tsx  Keyboard.tsx  Monitors.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  Topology.tsx
ui/src/lib/: mock-data.ts  types.ts  utils.ts
