[package]
name = "full-kvm-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "full-kvm-agent"
path = "src/main.rs"

[features]
default = ["stub-ddc"]
stub-ddc = ["full-kvm-core/stub-ddc"]
real-ddc = ["full-kvm-core/real-ddc"]

[dependencies]
full-kvm-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
