[package]
name = "softkvm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "softkvm"
path = "src/main.rs"

[features]
default = ["stub-ddc"]
stub-ddc = ["softkvm-core/stub-ddc"]
real-ddc = ["softkvm-core/real-ddc"]

[dependencies]
softkvm-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
