[package]
name = "full-kvm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
stub-ddc = []
real-ddc = ["ddc-hi"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }

ddc-hi = { version = "0.4", optional = true }
