[package]
name = "full-kvm-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "full-kvm-orchestrator"
path = "src/main.rs"

[features]
default = []
real-ddc = ["full-kvm-core/real-ddc"]

[dependencies]
full-kvm-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
full-kvm-core = { workspace = true, features = ["stub-ddc"] }
