[package]
name = "softkvm-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "softkvm-orchestrator"
path = "src/main.rs"

[features]
default = []
real-ddc = ["softkvm-core/real-ddc"]

[dependencies]
softkvm-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
softkvm-core = { workspace = true, features = ["stub-ddc"] }
